tests/typing/bad/testfile-while-1.jl
while (x = "41" + 1; true) end
